# ComLightInterop

./: .gitignore  ComLight.sln  README.md
ComLight/: AssemblyInfo.cs  ComInterfaceAttribute.cs  ComLight.csproj  ComLightCast.cs  ComLightInterop.nuspec  ComLightInterop.targets  CustomConventionsAttribute.cs  DebuggerTypeProxyAttribute.cs  EmitUtils.cs  IUnknown.cs  LiveObjectsCache.cs  ManagedObject.cs  ManagedWrapper.cs  ManagedWrapper.impl.cs  Marshaler.cs  NativeStringAttribute.cs  NativeWrapper.cs  ParamsMarshalling.cs  PropertyAttribute.cs  Readme.md  RetValIndexAttribute.cs  RuntimeClass.cs  WrapInterface.cs  WrapInterface.marshal.cs  iComDisposable.cs
ComLight/Cache/: Managed.cs  Native.cs
ComLight/Emit/: Assembly.cs  BaseInterfaces.cs  Proxy.cs  (+5 more)
ComLightDesktop/: ComLightDesktop.csproj  app.config  packages.config
ComLightLib/: ComLightLib.vcxproj  ComLightLib.vcxproj.filters  Exception.hpp  comLightCommon.h  comLightServer.h  hresult.h  iReadStream.h  streams.h  unknwn.h
Demos/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.cs  HelloWorld.def
Demos/StreamsCpp/: CMakeLists.txt  NativeFileSystem.cpp  Streams.cpp  Streams.def  Streams.vcxproj  Streams.vcxproj.filters  interfaces.h
DesktopClient/: DesktopClient.csproj  Program.cs
DesktopTest/: DesktopTest.csproj  Program.cs
NativeLibrary/: CMakeLists.txt  ITest.h  NativeLibrary.vcxproj  NativeLibrary.vcxproj.filters  Test.cpp  Test.h  WriteStream.cpp  WriteStream.h  dllmain.cpp  library.def  stdafx.h
PortableClient/: ITest.cs  LinuxUtils.cs  ManagedImpl.cs  PortableClient.cs  PortableClient.csproj  Program.cs  TestClass.cs  Tests.cs
(+45 files in other folders)
