cmake_minimum_required( VERSION 3.5 )
project( helloworld LANGUAGES CXX )
set( CMAKE_CXX_STANDARD 14 )
set( CMAKE_CXX_STANDARD_REQUIRED ON )
set( CMAKE_CXX_EXTENSIONS OFF )
set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wno-psabi -march=native -O3" )
add_library( helloworld SHARED HelloWorld.cpp )